syntax = "proto3";

package vertis.stream.yt.test;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;


message OldVersion {
    google.protobuf.Timestamp timestamp = 1;
    string persistent = 2;
    string gone = 3;
    string renamed = 4;
}

message NewVersion {
    google.protobuf.Timestamp timestamp = 1;
    string persistent = 2;
    string renamed_to = 4;
}
